<resources>
    <string name="app_name">Finance App</string>
    <string name="nav_home">Home</string>
    <string name="setting">Setting</string>
    <string name="amount_available">Amount Available:</string>
    <string name="amount">Amount</string>
    <string name="add_money_in_out">Add Money In Out</string>
    <string name="name">Name:</string>
    <string name="amount1">Amount:</string>
    <string name="description1">Description: </string>
    <string name="money_type1">Money Type:</string>
    <string name="type1">Type:</string>
    <string name="time1">Time:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="you_havennot_selected_one_yet">You haven\'t selected one yet!</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete">Are you sure to delete</string>
    <string name="records">records</string>
    <string name="deleted">Deleted!</string>
    <string name="caclculate_into_the_total_amonut">Calculate into the total amount</string>
    <string name="add_type">Add Type</string>
    <string name="sales_money">Sales money</string>
    <string name="invest">invest</string>
    <string name="bank">Bank</string>
    <string name="cash">Cash</string>
    <string name="date">Date: </string>
    <string name="currecy1">Currecy: </string>
    <string name="add">Add</string>
    <string name="add_money_type">Add money type</string>
    <string name="add_currency">Add currency</string>
    <string name="message_name_is_empty">Please enter a name!</string>
    <string name="money_in">Money In</string>
    <string name="money_out">Money Out</string>
    <string name="add_money_type_lable">Add Money Type</string>
    <string name="total_money">Total Money:</string>
    <string name="total_money_in_banks1">Total money in banks:</string>
    <string name="total_cash1">Total cash:</string>
    <string name="set_total_money_in_banks">1. Set total money in banks</string>
    <string name="set_total_cash">2. Set total cash</string>
    <string name="history1">4. History</string>
    <string name="money_unit1">Money unit:</string>
    <string name="money_format1">Money format:</string>
    <string name="_3_set_money_unit">3. Set money unit</string>
    <string name="_4_set_money_format">4. Set money format</string>
    <string name="set_total_money_in_banks_title">Set total money in banks</string>
    <string name="set_total_cash_title">Set total cash</string>
    <string name="set_money_unit_title">Set money unit</string>
    <string name="set_money_format">Set money format</string>
    <string name="total_money_in_bank_history1">Total money in bank history:</string>
    <string name="total_carsh1">Total cash:</string>
    <string name="pick_currency">Pick Currency</string>
    <string name="pick_type">Pick Type</string>
    <string name="total_money_out">Total money out:</string>
    <string name="total_money_in">Total money in:</string>
    <string name="please_enter_name_and_amonut">Please enter the name and amount!</string>
    <string name="please_enter_a_number">Please enter a number!</string>
    <string name="filter">Filter:</string>
    <string name="not_equal">not equal</string>
    <string name="contains">contains</string>
    <string name="not_contains">not contains</string>
    <string name="choose">Choose</string>
    <string name="search111">Search…</string>
    <string name="reverse">reverse</string>
    <string name="sort_by">Sort by:</string>
    <string name="create_time">create time</string>
    <string name="filter_title">Filter</string>
    <string name="name1">name</string>
    <string name="amount2">amount</string>
    <string name="date1">date</string>
    <string name="money_type__money_in">Money Type: money in</string>
    <string name="money_type__money_out">Money Type: money out</string>
    <string name="currency__cash">Currency: Cash</string>
    <string name="currency__bank">Currency: Bank</string>
    <string name="record_has_time">Record has: Time</string>
    <string name="record_without_time">Record without: Time</string>
    <string name="record_has_description">Record has: Description</string>
    <string name="record_without_description">Record without: Description</string>
    <string name="amount_greater_than_or_equal_500000"><![CDATA[Amount >= 500 000]]></string>
    <string name="operator1">"Operater: "</string>
    <string name="value_1">"Value: "</string>
    <string name="enter_value_">Enter value...</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_year">Last year</string>
    <string name="name2">Name</string>
    <string name="currency">Currency</string>
    <string name="money_type">Money Type</string>
    <string name="description">Description</string>
    <string name="date2">Date</string>
    <string name="search_title_name">"Name: "</string>
    <string name="search_title_amount">"Amount: "</string>
    <string name="search_title_type">Type: </string>
    <string name="search_title_time">"Time: "</string>
    <string name="search_title_description">"Description: "</string>
    <string name="filter_title_calculate_into_the_total_money_checked">Calculate into the total money: checked</string>
    <string name="filter_title_calculate_into_the_total_money_not_check">Calculate into the total money: not check</string>
    <string name="search">Search</string>
    <string name="search____">Search...</string>
    <string name="cash1">Cash:</string>
    <string name="money_in_bank1">Money in bank:</string>
    <string name="money_in1">Money in:</string>
    <string name="money_out1">Money out:</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="filter1">Filter:</string>
    <string name="insert_default">Insert default</string>
    <string name="create_new_filter">Create new filter</string>
    <string name="report">Report</string>
    <string name="based_on_current_filter">(based on current filter)</string>
    <string name="input_history">Input History</string>
    <string name="sort">Sort</string>
    <string name="detail">Detail</string>
    <string name="select_all">Select all</string>
    <string name="edit">Edit</string>
    <string name="total_cash_history">Total cash history</string>
    <string name="null1">null+</string>
    <string name="null2">null-</string>
    <string name="loading">Loading...</string>
</resources>