<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="#E6CAAD"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_money_type_lable"
        android:textSize="20sp"
        android:textColor="@color/color_black_2"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15sp"
        android:hint="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_type_in_out_lable"
        android:layout_below="@+id/edit_name"
        android:text="@string/type1"
        android:textStyle="bold"
        android:textColor="@color/color_black_2"
        android:layout_marginTop="10dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:layout_below="@id/tv_type_in_out_lable"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_type_money_in"
            android:text="@string/money_in"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_type_money_out"
            android:text="@string/money_out"
            />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/radio_group"
        android:text="@string/save"
        android:background="@drawable/bg_button_1"
        android:id="@+id/btn_save"
        android:layout_marginTop="5dp"
        />

</RelativeLayout>