<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_gravity="center"
    android:background="#F1D9D9"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_currency"
        android:textSize="20sp"
        android:id="@+id/tv_title"
        android:textColor="@color/color_black_2"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit1"
        android:id="@+id/edit_name"
        android:layout_below="@id/tv_title"
        android:hint="@string/name"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/btn_save"
        android:text="@string/add"
        android:layout_below="@id/edit_name"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_button_1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        />
</RelativeLayout>