<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/yesterday"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_detail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_1"
        android:text="Detail"
        android:layout_below="@id/tv_name"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/tv_total_money_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_detail"

        android:layout_marginLeft="5dp"
        android:text="@string/total_money_in"
        android:textColor="@color/color_black_2"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_total_money_in_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_detail"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tv_total_money_in_label"
        android:text="100.000 d"
        android:textColor="@color/color_black_2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_total_money_out_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_total_money_in_value"
        android:layout_marginLeft="5dp"
        android:text="@string/total_money_out"
        android:textColor="@color/color_black_2"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_total_money_out_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_total_money_in_value"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tv_total_money_out_label"
        android:text="100.000 d"
        android:textColor="@color/color_black_2"
        android:textSize="14sp" />

    <View
        android:id="@+id/line1"
        android:layout_below="@id/tv_total_money_out_value"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/color_black_2" />
</RelativeLayout>
