<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/filter_title"
        android:textColor="@color/color_black_2"
        android:textSize="17sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/tv_title"
        android:layout_marginBottom="3dp"
        tools:listitem="@layout/item_filter_money_io_big" />

    <RelativeLayout
        android:id="@+id/layout_create_new_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerView"
        android:background="#DAF6FF"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_field_name"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="Field: "
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinner_field_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="100dp" />

        <TextView
            android:id="@+id/tv_operator"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/tv_field_name"
            android:gravity="center"
            android:text="@string/operator1"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinner_operator"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/spinner_field_name"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="100dp" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/tv_operator"
            android:gravity="center"
            android:text="@string/value_1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_value"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/spinner_operator"
            android:layout_alignLeft="@id/spinner_operator"
            android:layout_toRightOf="@id/tv_value"
            android:background="@drawable/bg_edit2"
            android:hint="@string/enter_value_"
            android:inputType="textNoSuggestions|text"
            android:textSize="12dp" />
    </RelativeLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/layout_create_new_filter"
        android:background="@color/black" />

    <Button
        android:id="@+id/btn_insert_default"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/layout_create_new_filter"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_button_1"
        android:text="Insert default"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/btn_add_new_filter"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/line3"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_button_1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Create new filter"
        android:textAllCaps="false" />


</RelativeLayout>
